fix two lines of text overflow

--- a/public/css/melis-market-place.css
+++ b/public/css/melis-market-place.css
@@ -539,6 +539,11 @@
 .melis-store .product-thumb-info-content {
 	text-align: center;
 }
+
+.melis-store .product-thumb-info-content .product-name {
+        margin-bottom: 0;
+}
+
 .melis-store .product-thumb-info-content .installed {
     font-size: 11px;
     font-weight: bold;
@@ -690,11 +695,20 @@
 }
 
 .melis-store .product-thumb-info .product-name a {
+    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0 auto;
     font-family: 'Roboto', sans-serif;
     color: #444;
     font-weight: bold;
     font-size: 16px;
     letter-spacing: 0.2px;
+    max-width: 400px;
+    height: 2.2em;
 }
 
 .melis-store .product-thumb-info .product-name a:hover {
